<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/tool"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llVisitors"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|end">

                        <TextView
                            android:id="@+id/newVisitor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bgrectangleoutlined"
                            android:padding="8dp"
                            android:text="@string/add_visitor"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/upcomingVisitors"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                    <TextView
                        android:id="@+id/noVisitors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/no_visitors"
                        android:textColor="@color/colorPrimary"
                        android:visibility="gone" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lladdVisitors"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_grey_outline_square"
                        android:gravity="top"
                        android:minLines="1"
                        android:padding="8dp"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/contact"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_grey_outline_square"
                        android:gravity="top"
                        android:inputType="number"
                        android:minLines="1"
                        android:padding="8dp"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/purpose"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/purpose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/bg_grey_outline_square"
                        android:gravity="top"
                        android:minLines="2"
                        android:padding="8dp"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/block"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/bg_grey_outline_square"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/spinnerBlocks"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:prompt="@string/select_item"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/flat"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/bg_grey_outline_square"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/spinnerFlats"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:prompt="@string/select_item"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/start_date"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <EditText
                                android:id="@+id/startDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="16dp"
                                android:background="@drawable/bg_grey_outline_square"
                                android:drawableEnd="@drawable/calendar"
                                android:editable="false"
                                android:gravity="top"
                                android:minLines="1"
                                android:padding="8dp"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/end_date"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <EditText
                                android:id="@+id/endDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="16dp"
                                android:background="@drawable/bg_grey_outline_square"
                                android:drawableEnd="@drawable/calendar"
                                android:editable="false"
                                android:gravity="top"
                                android:minLines="1"
                                android:padding="8dp"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/start_time"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <EditText
                                android:id="@+id/startTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="16dp"
                                android:background="@drawable/bg_grey_outline_square"
                                android:drawableEnd="@drawable/time"
                                android:editable="false"
                                android:gravity="top"
                                android:minLines="1"
                                android:padding="8dp"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/end_time"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <EditText
                                android:id="@+id/endTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="16dp"
                                android:background="@drawable/bg_grey_outline_square"
                                android:drawableEnd="@drawable/time"
                                android:editable="false"
                                android:gravity="top"
                                android:minLines="1"
                                android:padding="8dp"
                                android:textSize="12sp" />
                        </LinearLayout>


                    </LinearLayout>


                    <TextView
                        android:id="@+id/error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/error_fields"
                        android:layout_marginTop="5dp"
                        android:gravity="start"
                        android:visibility="gone"
                        android:textColor="@color/red"/>
                    <!--  <TextView
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginStart="5dp"
                          android:text="@string/flat_details"
                          android:textColor="@color/black"
                          android:textSize="12sp" />

                      <EditText
                          android:id="@+id/flatAddress"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="4dp"
                          android:layout_marginBottom="16dp"
                          android:background="@drawable/bg_grey_outline_square"
                          android:gravity="top"
                          android:minLines="1"
                          android:padding="8dp"
                          android:textSize="12sp" />-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:padding="8dp">

                        <Button
                            android:id="@+id/submit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_bg"
                            android:text="Submit"
                            android:textColor="@android:color/white" />


                    </LinearLayout>
                </LinearLayout>



            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>